syntax = "proto2";
package protobuf.app.message;
option java_package = "com.efun.game.protobuf.app.message";
option java_outer_classname = "UpdateUserSignInStatusRespProto";
import "BaseResp.proto";

message UpdateUserSignInStatusResp {
    required BaseResp baseResp = 1; // 处理结果
    optional fixed64 sessionId = 2;
}